pequena revisao textual

--- a/projeto.ipynb
+++ b/projeto.ipynb
@@ -38,7 +38,7 @@
    "source": [
     "Neste módulo, vamos fazer um estudo de caso para práticar a análise dos resultados de um projeto de machine learning, você deverá se reunir em um grupo com de 4 a 5 pessoas e seguir o passo a passo abaixo.\n",
     "\n",
-    "- Escolher um Dataset, valide com o professor se o dataset escolhido é valido :heavy_check_mark:\n",
+    "- Escolher um Dataset, valide com o professor se o dataset escolhido é válido\n",
     "\n",
     "- Definir uma aplicação de Machine Learning para aplicar ao Dataset: escolhemos como variável dependente (target) a qualidade do sono por meio de classificação\n",
     "\n",
@@ -822,7 +822,7 @@
     }
    ],
    "source": [
-    "# Ao dropar a coluna ID verifica-se a existência de muitos registros duplicados\n",
+    "# Ao dropar a coluna ID, verifica-se a existência de muitos registros duplicados\n",
     "df.duplicated().sum()"
    ]
   },
@@ -844,7 +844,7 @@
    "source": [
     "# Dropando registros duplicados para evitar data leakage.\n",
     "# Embora estejam sendo dropados, há certa discussão sobre\n",
-    "# o quão isso impactará no modelo, dado que se os dados são repetidos\n",
+    "# como isso impactará o modelo, dado que se os dados são repetidos\n",
     "# para pessoas diferentes, onde todas as variáveis independentes são iguais\n",
     "# e resultaram no mesmo valor para a variável dependente, reforça que\n",
     "# se o modelo aprendesse com esses dados, teriam peso maior para assertividade\n",
@@ -3831,6 +3831,18 @@
     "plt.show()\n",
     "\n",
     "print(classification_report(y_train, y_pred_train))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Escolha do modelo\n",
+    "\n",
+    "Com base nos resultados apresentados, observa-se que os estimadores tiveram performances semelhantes, mas o que performou melhor (sem aparentar tanto overfitting) foi a **árvore de decisões**.  \n",
+    "Contudo, por causa da uniformidade dos dados e de sua quantidade pequena, é difícil dizer se ele traria bons resultados em produção. Seria mais seguro coletar mais dados, quem sabe coletando mais variáveis, para obter um quadro mais representativo da população.  \n",
+    "De fato, outro problema foi que não pudemos verificar a fonte desses dados, o que significa que quaisquer conclusões obtidas por meio deles deve ser analisada com um olhar bastante crítico."
    ]
   },
   {
