--- a/projeto.ipynb
+++ b/projeto.ipynb
@@ -847,7 +847,7 @@
     "# para pessoas diferentes, onde todas as variáveis independentes são iguais\n",
     "# e resultaram no mesmo valor para a variável dependente, reforça que\n",
     "# se o modelo aprendesse com esses dados, teriam peso maior para assertividade\n",
-    "# das notas. Desta forma, iremos trazê-los de volta para os dados de treino.\n",
+    "# das notas.\n",
     "df_duplicados = df[df.duplicated()]\n",
     "df2 = df.copy(deep=True)\n",
     "df2.drop_duplicates(inplace=True)\n",
