add explicação apneia

--- a/projeto.ipynb
+++ b/projeto.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "8R3YQoqwtuY4"
@@ -15,11 +14,10 @@
     "- Isabella Beserra\n",
     "- José Venâncio\n",
     "- Julia Muto\n",
-    "- Will Menezes"
+    "- Willker Menezes"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "g9tLCq7TtuY8"
@@ -29,7 +27,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "yf3yIZuQxSPJ"
@@ -53,7 +50,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "WtQOGPX0tuY8"
@@ -63,7 +59,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "lR-of8xjxOU2"
@@ -73,7 +68,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "Ajsd0gUKtuY9"
@@ -83,7 +77,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "cBXeCmPtxJ9s"
@@ -91,21 +84,24 @@
    "source": [
     "- Person ID: Identificador para cada indivíduo.\n",
     "- Gender: Gênero de cada pessoa (Feminino/Masculino)\n",
-    "- Age: Idade da pessoa em anos.\n",
+    "- Age: Idade da pessoa em anos.<br>\n",
+    "[ _A qualidade do sono pode variar de acordo com a idade devido a mudanças fisiológicas e de estilo de vida, como uso de eletrônicos antes de dormir, horários irregulares de sono e demandas diárias. À medida que envelhecemos, ocorre diminuição da quantidade de sono profundo e aumento dos despertares noturnos. Isso pode levar a uma sensação de sono menos reparador._ ]\n",
     "- Occupation: Ocupação ou profissão da pessoa.\n",
     "- Sleep Duration (hours): Número de horas que a pessoa dorme por dia.\n",
     "- **Quality of Sleep** (scale: 1-10): Nota subjetiva de qualidade do sono entre 1 e 10.\n",
-    "- Physical Activity Level (minutes/day): Número de minutos que a pessoa realiza atividades físicas diariamente.\n",
-    "- Stress Level (scale: 1-10): Nota subjetiva de nível de stress vivida pela pessoa entre 1 e 10.\n",
+    "- Physical Activity Level (minutes/day): Número de minutos que a pessoa realiza atividades físicas diariamente.<br>\n",
+    "[ _A prática regular de atividade física ajuda a regular os ciclos de sono-vigília, além de promover a liberação de neurotransmissores que induzem a sensação de relaxamento, bem-estar e redução da ansiedade, o que pode ajudar a reduzir a insônia e melhorar a eficiência do sono._ ]\n",
+    "- Stress Level (scale: 1-10): Nota subjetiva de nível de stress vivida pela pessoa entre 1 e 10.<br>\n",
+    "[ _Quando estamos estressados, nosso corpo libera hormônios do estresse, como o cortisol, que podem aumentar a vigilância e dificultar o adormecimento. Além disso, o estresse está associado a um aumento da atividade mental e preocupações, o que pode levar à insônia e a um sono menos reparador._ ]\n",
     "- BMI Category: Categoria do IMC de cada pessoa(e.g., ||The BMI category of the person (e.g., Normal, Sobrepeso, Obesidade).\n",
     "- Blood Pressure (systolic/diastolic): Medição da pressão sanguínea de cada pessoa, indicada por pressão sistólica sobre pressão diastólica.\n",
-    "- Heart Rate (bpm): Batimento cardíaco da pessoa enquanto descansada.\n",
+    "- Heart Rate (bpm): Batimento cardíaco da pessoa enquanto descansada.<br>\n",
+    "[ _A pressão arterial e a frequência cardíaca são indicadores comuns de estresse que, como mencionado, estão relacionados a uma pior qualidade do sono. Ainda, esses parâmetros podem indicar a presença de desordens do sono, como será comentado mais adiante._ ]\n",
     "- Daily Steps: Número de passos dados pela pessoa por dia.\n",
     "- **Sleep Disorder**: Presença ou falta de uma desordem de sono na pessoa (Nenhuma, Insônia, Apnéia do sono)."
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "TJHwYnUOuWs6"
@@ -141,7 +137,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "-7WiCpSrxUbx"
@@ -826,7 +821,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "ZVcyHitzx2pS"
@@ -855,7 +849,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1186,7 +1179,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "8mVZ2pqu2dPn"
@@ -1196,7 +1188,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "o0iFAIJx3Zfo"
@@ -1206,7 +1197,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "W7zdqwyF3sk1"
@@ -1253,7 +1243,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "33RAo0VR3zCY"
@@ -1337,7 +1326,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "rYQOqcVY35qw"
@@ -1377,7 +1365,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "qvwc57sm3_Eh"
@@ -1424,7 +1411,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "4Y41BVYm4DSt"
@@ -1471,7 +1457,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "5BSDKqBd4IEr"
@@ -1518,7 +1503,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "BDPH8CMK4Ljn"
@@ -1565,7 +1549,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "3yfm9TfA4QlF"
@@ -1612,7 +1595,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1650,7 +1632,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "uJFFwiEW4Vbq"
@@ -1697,7 +1678,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "t07wvYrmtuZJ"
@@ -1707,7 +1687,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "pljLDYoE-wMj"
@@ -1804,7 +1783,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "CtsRO1CC_-yH"
@@ -1814,7 +1792,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "n2PqVSag_x3h"
@@ -1824,7 +1801,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "yYem8KNAHOXO"
@@ -1845,7 +1821,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "qNd3t-obHH-S"
@@ -1877,7 +1852,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1894,7 +1868,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "gq57esKVBGcG"
@@ -1942,7 +1915,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "tXOqgBMNtuZT"
@@ -1953,6 +1925,19 @@
     "- Sleep Disorder_Apnea (multicolinearidade com \"Mean Arterial Pressure\", que explica melhor)\n",
     "\n",
     "(https://statisticsbyjim.com/regression/multicollinearity-in-regression-analysis/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A multicolinearidade entre a presença de apneia do sono (Sleep Disorder_Apnea) e a hipertensão (alta Pressão Arterial Média\" (Mean Arterial Pressure)) possui explicação biológica. \n",
+    "\n",
+    "A apneia do sono é um distúrbio caracterizado por pausas na respiração durante o sono, resultando em interrupções repetidas da respiração. Essas pausas podem levar a episódios de hipóxia (baixo nível de oxigênio) nos tecidos. Assim, o sistema cardiovascular tenta compensar essa hipóxia enviando mais sangue para os tecidos (já que o sangue transporta os gases da respiração); e isso se reflete no possível aumento da frequência cardíaca e da pressão arterial. \n",
+    "\n",
+    "Além disso, os episódios de apneia desencadeiam mecanismos fisiológicos de estresse, que também podem contribuir para o aumento da pressão arterial. \n",
+    "\n",
+    "Assim, a multicolinearidade possui embasamento biológico, ressaltando o comprometimento da independência da variável."
    ]
   },
   {
@@ -2724,7 +2709,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "cfcCHR5lEdFF"
@@ -2734,7 +2718,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2767,7 +2750,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "TrStCbIvEia-"
@@ -2932,7 +2914,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3038,7 +3019,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3206,7 +3186,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3312,7 +3291,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3449,7 +3427,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3555,7 +3532,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3699,7 +3675,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3808,7 +3783,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3820,7 +3794,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3828,7 +3801,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3919,7 +3891,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3937,7 +3908,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -4570,7 +4540,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
